# coho

./: .gitignore  CMakeLists.txt  README.md  build.sh
doc/dev-doc/: overview.md  通信协议.md
doc/tutorial/: get-started.md
src/: main.cpp
src/global_processer/: main.cc
src/global_processor/: global_processor.cc  global_processor.h  main.cc
src/submitter/: main.cc
src/utility/: args.cpp  args.h
src/worker/: main.cc
